--- a/ueg-cet-progwebi-collegeapi/ueg-cet-progwebi-collegeapi20251-main/src/main/resources/application.properties
+++ b/ueg-cet-progwebi-collegeapi/ueg-cet-progwebi-collegeapi20251-main/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=collegeapi
 spring.devtools.restart.enabled=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/progweb
+spring.datasource.url=jdbc:postgresql://localhost:5433/aula01
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create-drop
